2009-01-09  Elliott Baron  <ebaron@redhat.com>

	* META-INF/MANIFEST.MF: Added all needed BIRT plugins to required bundles.

2009-01-08  Elliott Baron  <ebaron@redhat.com>

	* META-INF/MANIFEST.MF: Added org.eclipse.birt.device.swt to required bundles.

2009-01-05  Elliott Baron  <ebaron@redhat.com>

	* MassifViewPart: Chart now opens upon launch; EditorInput is cached once
	created.
	* ChartControl: Catches ChartException.
	* ChartRenderer: First attempt at callbacks
	* HeapChart: Likewise.
	* META-INF/MANIFEST.MF: Changed version to 0.1.0.
	* build.properties: Include about.html and icons.